# iri-client

./: .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml
.github/workflows/: publish-cratesio.yml  publish-pypi.yml  rust.yml
examples/: async_api_client_sites.rs  async_get_projects.rs  async_get_resources.rs  blocking_get_projects.rs  blocking_get_resources.rs  blocking_list_operations.rs  env.sh  generate_auth_token.py  python_async_module_example.py  python_module_example.py  submit_job.py
openapi/: openapi.json
python/iri_client/: __init__.py  __init__.pyi  _iri_client.pyi
scripts/: release-tag.sh
src/: blocking_client.rs  client.rs  error.rs  lib.rs  openapi_client.rs  python.rs
