[package]
name = "iri-client"
version = "0.1.4"
authors = ["Julien Esseiva <jesseiva@lbl.gov>"]
edition = "2024"
build = "build.rs"
description = "Rust client and Python bindings for the NERSC IRI API"
readme = "README.md"
license = "BSD-3-Clause"
documentation = "https://docs.rs/iri-client"
homepage = "https://api.iri.nersc.gov"
repository = "https://github.com/esseivaju/iri-client"
keywords = ["api", "openapi", "client", "nersc", "python"]
categories = ["command-line-utilities", "web-programming::http-client"]

[lib]
name = "iri_client"
crate-type = ["rlib", "cdylib"]

[features]
default = []
cli = ["dep:anyhow", "dep:clap", "dep:tokio"]
python = ["dep:pyo3", "dep:pyo3-async-runtimes"]

[dependencies]
anyhow = { version = "1", optional = true }
clap = { version = "4.5", optional = true, features = ["derive", "env"] }
pyo3 = { version = "0.28.2", optional = true, features = ["abi3-py39"] }
pyo3-async-runtimes = { version = "0.28.0", optional = true, features = ["tokio-runtime"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "query", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", optional = true, default-features = false, features = ["macros", "rt-multi-thread"] }
url = "2"

[build-dependencies]
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "iri-cli"
path = "src/bin/iri-cli.rs"
required-features = ["cli"]

[lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Pragmatic allowances for API/client crates.
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
