[build-system]
requires = ["maturin>=1.9.4,<2.0"]
build-backend = "maturin"

[project]
name = "iri-client"
version = "0.1.0"
description = "Python bindings for iri-client"
requires-python = ">=3.9"
readme = "README.md"
license = "BSD-3-Clause"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://api.iri.nersc.gov"
Documentation = "https://docs.rs/iri-client"

[tool.maturin]
features = ["python"]
module-name = "iri_client"
