[build-system]
requires = ["maturin>=1.9.4,<2.0"]
build-backend = "maturin"

[project]
name = "iri-client"
dynamic = [
    "version",
    "readme",
    "license",
    "keywords",
    "authors",
    "urls",
    "description"
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[tool.maturin]
features = ["python"]
module-name = "iri_client"
bindings = "pyo3"
